Correção de titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git Publico</title>
 </head>
 <body>
-    <h1>Pagina de Git Publico</h1>
-    <p>Algum texto sem importancia...</p>
+    <h1>Repo Público Github</h1>
+    <p>Algum texto público e sem importancia...</p>
 </body>
 </html>
